--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
   "name": "@stacks-os/utils",
   "version": "1.0.1",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/StacksOS/utils.git"
+  },
+  "keywords": [
+    "stacks",
+    "web3",
+    "utils"
+  ],
+  "author": "Ryan Waits",
   "main": "./lib/cjs/index.js",
   "module": "./lib/esm/index.js",
   "files": [
